--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --Orangeyellow: hsl(39, 100%, 56%);
   --Greenteal: hsl(166, 100%, 37%);
   --Cobaltblue: hsl(234, 85%, 45%);
+  --paleblue: hsl(221, 100%, 96%);
 }
 
 * {
@@ -21,21 +22,24 @@ body {
 .container {
   margin: 100px;
   background-color: var(--white);
-  box-shadow: 1px 1px 5px grey;
+  /*box-shadow: 1px 1px 5px grey;*/
   min-height: 100vh;
 }
 .result-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0 auto;
   gap: 1rem;
-  width: 700px;
-  height: 600px;
-  box-shadow: 0px 0px 5px grey;
+  width: 760px;
+
+  height: 500px;
+  padding-top: 10%;
+  /*box-shadow: 0px 0px 5px grey;*/
 }
 .result {
-  flex: 0 0 45%;
+  flex: 1 1 40%;
   border-radius: 20px;
   background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   padding: 30px;
@@ -43,13 +47,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
 }
 .summary {
-  flex: 0 0 40%;
+  flex: 1 1 30%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 4rem;
+  gap: 2rem;
 }
 .result .score {
   width: 200px;
@@ -75,31 +80,43 @@ body {
 
 .summary .reaction {
   color: var(--Lightred);
+  background-color: hsla(0, 100%, 67%, 0.1);
 }
 .summary .memory {
   color: var(--Orangeyellow);
+  background-color: hsla(39, 100%, 56%, 0.1);
 }
 .summary .verbal {
   color: var(--Greenteal);
+  background-color: hsla(166, 100%, 37%, 0.1);
 }
 .summary .visual {
   color: var(--Cobaltblue);
+  background-color: hsla(234, 85%, 45%, 0.1);
 }
 .summary .titles {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 25px;
-  padding-right: 25px;
-
+  margin-bottom: 10px;
+  padding: 20px;
   border-radius: 10px;
+  font-weight: 500;
 }
-.summary .titles img {
-  font-size: 18px;
+.summary .titles section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.3rem;
 }
-summary .titles p span {
-  padding: 10px;
+.summary .titles .score {
+  font-weight: 700;
+  color: hsla(224, 30%, 27%, 0.4);
+}
+.summary .titles p span {
+  color: var(--darkgreyblue);
+  padding: 5px;
 }
 .summary .continue {
   background: none;
@@ -110,4 +127,5 @@ summary .titles p span {
   border-radius: 30px;
   font-size: 18px;
   padding: 20px;
+  font-weight: 700;
 }
